Fixed track names being truncated on small device and adjusted burger menus on music card

--- a/src/app/themes/volumio3/browse-music/components/music-card.scss
+++ b/src/app/themes/volumio3/browse-music/components/music-card.scss
@@ -87,25 +87,29 @@
     }
     .action-btn {
         transition: opacity 0.15s ease-out 0s;
+        text-shadow: 0 0 4px rgba(0,0,0, .35);
+        font-size: 17px;
+        padding: 1px 12px;
         &:hover,
         &:active,
         &:focus {
             color: $theme-primary-color;
             outline: none;
         }
-        &:after {
+        /* &:after {
             content: '';
             display: block;
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0,0,0,.2);
+            top: -40px;
+            right: -40px;
+            width: 72px;
+            height: 72px;
+            background: rgba(0,0,0,.25);
             z-index: inherit;
-            filter: blur(6px);
+            filter: blur(8px);
             transform: translate3d(0,0,0);
-        }
+            border-radius: 100px;
+        } */
         .fa {
             position: relative;
             z-index: 20;
