--- a/src/app/themes/volumio3/browse-music/components/music-item.scss
+++ b/src/app/themes/volumio3/browse-music/components/music-item.scss
@@ -167,6 +167,15 @@
         margin-bottom: 0;
     }
 
+    .item__title{
+        &__half {
+            flex: 0 0 calc((100% / 3) * 2);
+        }
+        &__full {
+            flex: 1 1 100%;
+        }
+    }
+
     .item__album,
     .item__artist {
         color: $theme-light-color;
